# SUAI-GUAP-labs-Matobase

./: README.md
SUAI-GUAP-labs-Matobase/1 sem/: Инфа тесты.docx  Титульник.docx
SUAI-GUAP-labs-Matobase/1 sem/Англ.яз/: Answers 1st semester.docx  ~$гл.яз пересказ тескта.docx  Англ.яз пересказ тескта.docx  Англ.яз.pptx  Документ Microsoft Word.docx  О себе.docx  План пересказ.docx  Текст к презентации.docx
SUAI-GUAP-labs-Matobase/1 sem/ВОПРОСЫ К ЭКЗАМЕНАМ/: Задачи.doc  Ответы на вопросы истории.docx  Ответы на вопросы по физике.docx  билеты_магила.docx  билеты_матан.docx  билеты_оти.docx
SUAI-GUAP-labs-Matobase/1 sem/Информатика/: ~$кст к презентации.docx  Инфа.xlsx  Информатика ГОСТ (надеюсь все).docx  Информатика письмо.docx  Работодатели.docx  инфа тесты на сайтах.docx  текст к презентации.docx
SUAI-GUAP-labs-Matobase/1 sem/История НЕ УДАЛЯТЬ/: МИНИСТЕРСТВО_НАУКИ_И_ВЫСШЕГО_ОБРАЗОВАНИЯ_РОССИЙСКОЙ_ФЕДЕРАЦИИ.docx
SUAI-GUAP-labs-Matobase/1 sem/Лабораторные по  MATLAB/: Доп задания.docx  Титульник.docx
SUAI-GUAP-labs-Matobase/1 sem/Физика/: ЛР 1 ФИЗИКА.docx  титульник физика.docx
SUAI-GUAP-labs-Matobase/1 sem/Физкультура/: 1.docx  Документ Microsoft Word.docx
SUAI-GUAP-labs-Matobase/2 sem/Англ.яз/: англ.docx  перевод текста.docx
SUAI-GUAP-labs-Matobase/2 sem/Дискретная математика/: 3.14.1.docx  3.14.2.docx  3.19.1.docx  3.28.1.docx  3.28.2.docx  3.28.3.docx  титульник для дискретки.docx
SUAI-GUAP-labs-Matobase/7 sem/7 сем ух Ë/Проектирование человеко-машинного интерфейса/sample rep/лаб 9 йоу/lab9/lab9sheka/: CMakeLists.txt  main.cpp
(+1781 files in other folders)
